--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
 					<h4>Suivi et Reporting</h4>
 					<ul class="list-unstyled">
 						<li><a href="@Url.Action("Index", "Section1")">Etats de Dépôt et de retrait</a></li>
-						<li><a asp-area="" asp-controller="Home" asp-action="RelevéCDRB">Relevé de Compte CDRB</a></li>
+						<li><a asp-area="" asp-controller="Home" asp-action="RelevCDRB">Relevé de Compte CDRB</a></li>
 						<li><a href="@Url.Action("Index", "Section2")">Operation non identifiées</a></li>
 					</ul>
 					<h4>Téléchargement</h4>
